[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://RobotPart/RobotPart.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0312

[sub_resource type="CircleShape2D" id=2]
radius = 40.05

[node name="RobotPart" type="Area2D"]
script = ExtResource( 2 )

[node name="Area2D" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = -75.0
anchor_right = 75.0
margin_left = -75.0
margin_top = -45.0
margin_right = 75.0
margin_bottom = -25.0
text = "Press ENTER"
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_RobotPart_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RobotPart_body_exited"]
